move files to appropriate Flask locations

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link href="custom.css" rel="stylesheet" type="text/css"/>
+		<link href="static/custom.css" rel="stylesheet" type="text/css"/>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title></title>
@@ -10,7 +10,7 @@
     </head>
 	<body>
 		<div id="app">
-			<script src="bundle.js"></script>
+			<script src="static/bundle.js"></script>
 		</div>
 	</body>
 </html>
