--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,12 @@
 		<title></title>
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet" type="text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<script src="https://js.pusher.com/3.1/pusher.min.js"></script>
+		<script>
+			Pusher.log = function (msg) { console.log(msg); };
+			var PUSHER_CHAP_APP_KEY = "{{ config['PUSHER_CHAT_APP_KEY'] }}";
+		</script>
+
 
     </head>
 	<body>
