--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 		<script src="https://js.pusher.com/3.1/pusher.min.js"></script>
 		<script>
 			Pusher.log = function (msg) { console.log(msg); };
-			var PUSHER_CHAP_APP_KEY = "{{ config['PUSHER_CHAT_APP_KEY'] }}";
+			var PUSHER_CHAT_APP_KEY = "{{ config['PUSHER_CHAT_APP_KEY'] }}";
 		</script>
 
 
